# pygen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: .isort.cfg  mypy.ini
pydev/: pydev.py
pydev/cli/: commit.py  docstring.py  explain.py  generate.py  git.py  refactor.py  resolve.py  review.py  suggest.py  tests.py
pydev/llm/: client.py
pydev/prompts/: docstring.py  git.py
pydev/utils/: llm.py  log.py  modules.py
pygen/: pygen.py
pygen/cli/: docstring.py  explain.py  generate.py  git.py  refactor.py  resolve.py  review.py  tests.py
pygen/prompts/: docstring.py  git.py  refactor.py  review.py  tests.py
pygen/utils/: llm.py  log.py  modules.py  rich.py
