[tool.poetry]
name = "pydev"
version = "0.0.2"
description = "A Python Development AI Co-pilot"
authors = ["Chris Jackett <chris.jackett@csiro.au>"]
readme = "README.md"

[tool.poetry.scripts]
pydev = "pydev.pydev:pydev"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.0"
rich = "^13.3.1"
boto3 = "^1.34.127"
python-dotenv = "^1.0.1"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
types-pyyaml = "^6.0.12.20240311"
bandit = "^1.7.8"
pydocstyle = "^6.3.0"
pylint = "^3.2.0"
pytest-cov = "^5.0.0"
pep8-naming = "^0.14.1"
flake8-bugbear = "^24.4.26"
flake8-comprehensions = "^3.14.0"
flake8-builtins = "^2.5.0"
boto3-stubs = "^1.34.127"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.env
  | \.venv
  | build
  | dist
  | temp
)/
'''
